rabbitMQ integration , some ui changes, redis